move commands into package.json

--- a/.github/workflows/lint_js.yml
+++ b/.github/workflows/lint_js.yml
@@ -14,10 +14,10 @@ jobs:
       - name: Install JS dependencies
         run: npm ci
       - name: Run ESLint
-        run: node_modules/.bin/eslint --quiet js/app/ assets/react
+        run: npm run lint -- --quiet
       - name: Run TypeScript Compiler
         id: tsc
-        run: node_modules/.bin/tsc --noEmit --pretty
+        run: npm run type-check
         continue-on-error: true
       - name: TypeScript Warning
         if: steps.tsc.outcome == 'failure'
