move behat fixtures into /fixtures

--- a/fixtures/ORM/packages.yml
+++ b/fixtures/ORM/packages.yml
@@ -1,6 +1,8 @@
 AppBundle\Entity\PackageSet:
   package_set_1:
     name: 'Standard'
+  package_set_2:
+    name: 'Standard'
 
 AppBundle\Entity\Package:
   package_small:
@@ -9,7 +11,7 @@ AppBundle\Entity\Package:
     averageVolumeUnits: 1.0
     packageSet: '@package_set_1'
     description: ''
-    short_code: 'SM'
+    short_code: 'AB'
     color: '#a91de0'
   package_xl:
     name: 'XL'
@@ -17,5 +19,13 @@ AppBundle\Entity\Package:
     averageVolumeUnits: 3.0
     packageSet: '@package_set_1'
     description: ''
-    short_code: 'XL'
+    short_code: 'AB'
+    color: '#a91de0'
+  package_small2:
+    name: 'SMALL'
+    maxVolumeUnits: 1.0
+    averageVolumeUnits: 1.0
+    packageSet: '@package_set_2'
+    description: ''
+    short_code: 'AB'
     color: '#a91de0'
