--- a/behat.yml
+++ b/behat.yml
@@ -21,5 +21,5 @@ default:
       sessions:
         default:
           symfony: ~
-      files_path: 'features/fixtures'
+      files_path: 'fixtures'
     Behatch\Extension: ~
