fix: package code

--- a/fixtures/ORM/stores.yml
+++ b/fixtures/ORM/stores.yml
@@ -98,7 +98,7 @@ AppBundle\Entity\Package:
     averageVolumeUnits: 1.0
     packageSet: '@package_set_1'
     description: ''
-    short_code: 'AB'
+    short_code: 'SM'
     color: '#a91de0'
   package_xl:
     name: 'XL'
@@ -106,7 +106,7 @@ AppBundle\Entity\Package:
     averageVolumeUnits: 3.0
     packageSet: '@package_set_1'
     description: ''
-    short_code: 'AB'
+    short_code: 'XL'
     color: '#a91de0'
 
 AppBundle\Entity\Tag:
