add(e2e tests): price recalculation

--- a/fixtures/ORM/store_with_task_pricing.yml
+++ b/fixtures/ORM/store_with_task_pricing.yml
@@ -54,6 +54,7 @@ AppBundle\Entity\Store:
     address: "@address_1"
     enabled: true
     pricingRuleSet: '@pricing_rule_set_1'
+    multiDropEnabled: true
     __calls:
       - addAddress: [ "@warehouse" ]
       - addAddress: [ "@client_1" ]
