--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -6,6 +6,7 @@ monolog:
       'domain_event',
       'checkout',
       'database',
+      'fee_calculation',
       'push_notification',
       'real_time_message',
       'transporter',
