use make command from github actions (runs with -e APP_ENV=test)

--- a/.github/workflows/test_behat.yml
+++ b/.github/workflows/test_behat.yml
@@ -22,7 +22,7 @@ jobs:
         uses: ./.github/actions/run-coopcycle-web
         timeout-minutes: 5
       - name: Run Behat
-        run: docker compose exec -T php vendor/bin/behat -f progress
+        run: make behat ARGS="-f progress"
       - name: Show Symfony warnings on failure
         if: failure()
         uses: ./.github/actions/show-symfony-warnings
