--- a/config/services.yaml
+++ b/config/services.yaml
@@ -85,6 +85,7 @@ services:
       $country: "%country_iso%"
       $environment: "%kernel.environment%"
       $packageDeliveryUiPriceBreakdownEnabled: "%package_delivery_ui_price_breakdown_enabled%"
+      $taxIncl: '%env(bool:COOPCYCLE_TAX_INCL)%'
 
   # For some cache pools, want *STABLE* cache keys between deploys.
   # To achieve this, we *EXPLICITLY* set a namespace,
