--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1683,3 +1683,7 @@ services:
   sentry.callback.before_send:
     class: 'AppBundle\Service\Sentry'
     factory: ['@AppBundle\Service\Sentry', "getBeforeSend"]
+
+  AppBundle\Api\LegacyEntrypointAction:
+    decorates: api_platform.action.entrypoint
+    arguments: ['@.inner']
