Implement pagination on my orders endopoint.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1022,6 +1022,10 @@ services:
     arguments:
       $collectionExtensions: !tagged api_platform.doctrine.orm.query_extension.collection
 
+  AppBundle\Api\State\MyOrdersProvider:
+    arguments:
+      $collectionExtensions: !tagged api_platform.doctrine.orm.query_extension.collection
+
   AppBundle\Api\Dto\DeliveryMapper:
   AppBundle\Api\Dto\TaskMapper:
 
