--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -12,7 +12,7 @@ monolog:
         default_file:
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/%kernel.environment%.log"
-            level: debug
+            level: info
             formatter: monolog.formatter.json
             max_files: 7
         api:
@@ -25,7 +25,7 @@ monolog:
         messenger:
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/messenger.%kernel.environment%.log"
-            level: debug
+            level: info
             formatter: monolog.formatter.json
             max_files: 7
             channels: [messenger]
@@ -45,7 +45,7 @@ monolog:
         checkout:
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/checkout.%kernel.environment%.log"
-            level: debug
+            level: info
             formatter: monolog.formatter.json
             max_files: 7
             channels: [ checkout, coopcycle.order_processing ]
@@ -59,14 +59,14 @@ monolog:
         push_notification:
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/push_notification.%kernel.environment%.log"
-            level: debug
+            level: info
             formatter: monolog.formatter.json
             max_files: 7
             channels: [ push_notification ]
         real_time_message:
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/real_time_message.%kernel.environment%.log"
-            level: debug
+            level: info
             formatter: monolog.formatter.json
             max_files: 7
             channels: [ real_time_message ]
