--- a/.github/workflows/test_behat.yml
+++ b/.github/workflows/test_behat.yml
@@ -29,3 +29,6 @@ jobs:
       - name: Upload Symfony logs on failure
         if: failure()
         uses: ./.github/actions/upload-symfony-logs
+      - name: Show Webpack logs on failure
+        if: failure()
+        run: docker compose logs webpack
