--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
         "symfony/doctrine-messenger": "*",
         "symfony/monolog-bundle": "*",
         "symfony/runtime": "*",
-        "symfony/ux-react": "2.10",
+        "symfony/ux-react": "^2.10",
         "symfony/ux-turbo": "^2.10",
         "symfony/stimulus-bundle": "^2.10",
         "symfony/cache": "*",
