--- a/.github/workflows/test_e2e.yml
+++ b/.github/workflows/test_e2e.yml
@@ -29,10 +29,7 @@ jobs:
       - name: Run Cypress
         uses: cypress-io/github-action@v6
         with:
-          # Maybe we could run a build step before starting tests
-          # https://symfony.com/doc/current/frontend/encore/installation.html
-          # https://github.com/cypress-io/github-action?tab=readme-ov-file#build-app
-          # build: npm run dev
+          install: false
           spec: |
             cypress/e2e/**/*.cy.js
         # after the test run completes store videos and any screenshots
