install cypress directly

--- a/.github/workflows/test_e2e.yml
+++ b/.github/workflows/test_e2e.yml
@@ -26,6 +26,15 @@ jobs:
         timeout-minutes: 10
       - name: Setup CoopCycle
         run: docker compose exec -T php bin/console coopcycle:setup --env=test
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/Cypress
+            node_modules
+          key: my-cache-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
+      # Install a cypress dependency directly to avoid installing everything from package.json
+      # To make things easier to debug, make sure that the version is the same as the one in package.json
+      - run: npm i cypress@14.4.1
       - name: Run Cypress
         uses: cypress-io/github-action@v6
         with:
