Revert "split cypress dependencies from the main package.json"
This reverts commit e1c92c6d1e5f8a6ed42df67002f74308be48bb28.

--- a/.github/workflows/test_e2e.yml
+++ b/.github/workflows/test_e2e.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Run Cypress
         uses: cypress-io/github-action@v6
         with:
-          working-directory: cypress
+          install: false
           spec: |
-            e2e/**/*.cy.js
+            cypress/e2e/**/*.cy.js
         # after the test run completes store videos and any screenshots
       - name: Upload images for failed tests
         uses: actions/upload-artifact@v4
