--- a/.github/workflows/test_e2e.yml
+++ b/.github/workflows/test_e2e.yml
@@ -33,8 +33,11 @@ jobs:
             cypress/node_modules
           key: my-cache-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
       # Install a cypress dependency directly to avoid installing everything from package.json
-      # To make things easier to debug, make sure that the version is the same as the one in package.json
-      - run: npm i cypress@14.4.1
+      - name: Install Cypress
+        # Installing in the cypress directory to avoid conflicts with the root node_modules
+        working-directory: cypress
+        # To make things easier to debug, make sure that the version is the same as the one in package.json
+        run: npm i cypress@14.4.1
       - name: Run Cypress
         uses: cypress-io/github-action@v6
         with:
