--- a/.github/workflows/test_e2e.yml
+++ b/.github/workflows/test_e2e.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           install: false
           working-directory: cypress
-          config-file: ../cypress.config.js
+          config-file: ./cypress-e2e-ci.config.js
           spec: |
             e2e/**/*.cy.js
         # after the test run completes store videos and any screenshots
