--- a/cypress/package.json
+++ b/cypress/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^14.4.1"
+    "cypress": "^14.4.1",
+    "dotenv": "^8.6.0"
   }
 }
