--- a/cypress/package.json
+++ b/cypress/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^14.4.1",
-    "dotenv": "^8.6.0"
+    "dotenv": "^8.6.0",
+    "moment": "^2.29.4"
   }
 }
