fix: spec pattern

--- a/.github/workflows/test_e2e.yml
+++ b/.github/workflows/test_e2e.yml
@@ -41,7 +41,7 @@ jobs:
           project: .
           config-file: ./cypress-e2e-ci.config.js
           spec: |
-            e2e/**/*.cy.js
+            cypress/e2e/**/*.cy.js
         # after the test run completes store videos and any screenshots
       - name: Upload images for failed tests
         uses: actions/upload-artifact@v4
