--- a/.github/actions/run-coopcycle-web/action.yml
+++ b/.github/actions/run-coopcycle-web/action.yml
@@ -7,6 +7,8 @@ runs:
     shell: bash
     run: |
       cp .env.dist .env
+#      FIXME: That might be not necessary
+#      sed -i -e 's/APP_ENV=dev/APP_ENV=test/g' .env
   - name: Pull Docker images
     shell: bash
     run: docker compose pull --ignore-pull-failures
@@ -17,6 +19,16 @@ runs:
       docker compose run -T --rm osrm osrm-extract -p /opt/bicycle.lua /data/data.osm.pbf
       docker compose run -T --rm osrm osrm-partition /data/data.osrm
       docker compose run -T --rm osrm osrm-customize /data/data.osrm
+    # Cypress GitHub Action uses npm ci, and it causes a "permission denied" error,
+    # because it tries to remove the node_modules/ folder, which is mounted with root:root
+    # We create the node_modules/ and vendor/ folders *BEFORE* starting the containers,
+    # so that it can be removed without problems.
+  - name: Create node_modules directory
+    shell: bash
+    run: mkdir node_modules
+  - name: Create vendor directory
+    shell: bash
+    run: mkdir vendor
   - name: Start Docker containers
     shell: bash
     run: docker compose up -d
