--- a/.github/actions/run-coopcycle-web/action.yml
+++ b/.github/actions/run-coopcycle-web/action.yml
@@ -21,14 +21,11 @@ runs:
       docker compose run -T --rm osrm osrm-customize /data/data.osrm
     # Cypress GitHub Action uses npm ci, and it causes a "permission denied" error,
     # because it tries to remove the node_modules/ folder, which is mounted with root:root
-    # We create the node_modules/ and vendor/ folders *BEFORE* starting the containers,
+    # We create the node_modules/ folder *BEFORE* starting the containers,
     # so that it can be removed without problems.
   - name: Create node_modules directory
     shell: bash
     run: mkdir node_modules
-  - name: Create vendor directory
-    shell: bash
-    run: mkdir vendor
   - name: Start Docker containers
     shell: bash
     run: docker compose up -d
