install js dependency from npm; keep version in sync with composer.json! https://www.npmjs.com/package/@symfony/ux-turbo https://www.npmjs.com/package/@symfony/ux-react

--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
     "@stripe/react-stripe-js": "^1.7.0",
     "@stripe/stripe-js": "^1.22.0",
     "@symfony/stimulus-bridge": "^3.2.2",
-    "@symfony/ux-react": "file:vendor/symfony/ux-react/assets",
-    "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
+    "@symfony/ux-react": "^2.30.0",
+    "@symfony/ux-turbo": "^2.30.0",
     "@symfony/webpack-encore": "^4.7.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
