--- a/.github/actions/run-coopcycle-web/action.yml
+++ b/.github/actions/run-coopcycle-web/action.yml
@@ -28,7 +28,8 @@ runs:
     run: mkdir node_modules
   - name: Start Docker containers
     shell: bash
-    run: docker compose up -d
+    # specify -f docker-compose.yml explicitly, because we don't want to load docker-compose.override.yml
+    run: docker compose up -f docker-compose.yml -d
   - name: Wait for PHP-FPM
     shell: bash
     run: until docker inspect --format='{{ .State.Health.Status }}' $(docker compose ps -q php) | grep -wq healthy; do sleep 5; done
