skip cypress install (should be already installed)

--- a/.github/workflows/test_e2e.yml
+++ b/.github/workflows/test_e2e.yml
@@ -33,6 +33,7 @@ jobs:
           # https://symfony.com/doc/current/frontend/encore/installation.html
           # https://github.com/cypress-io/github-action?tab=readme-ov-file#build-app
           # build: npm run dev
+          install: false
           spec: |
             cypress/e2e/**/*.cy.js
         # after the test run completes store videos and any screenshots
