--- a/src/Resources/config/taxation.yml
+++ b/src/Resources/config/taxation.yml
@@ -45,6 +45,8 @@ service:
       standard: 0.125
     ch:
       standard: 0.081
+    nl:
+      standard: 0.21
 
 service_tax_exempt:
   rates:
@@ -89,6 +91,8 @@ service_tax_exempt:
     gh:
       zero: 0.0
     ch:
+      zero: 0.0
+    nl:
       zero: 0.0
 
 drink:
@@ -177,6 +181,8 @@ base_standard:
       standard: 0.125
     ch:
       standard: 0.081
+    nl:
+      standard: 0.21
 
 base_intermediary:
   rates:
@@ -240,6 +246,8 @@ base_reduced:
       reduced: 0.03
     ch:
       reduced: 0.026
+    nl:
+      reduced: 0.09
 
 base_exempt:
   rates:
@@ -285,4 +293,6 @@ base_exempt:
     gh:
       zero: 0.00
     ch:
+      zero: 0.00
+    nl:
       zero: 0.00
