--- a/fixtures/ORM/high_volume_instance.yml
+++ b/fixtures/ORM/high_volume_instance.yml
@@ -52,10 +52,12 @@ AppBundle\Entity\Sylius\PricingRulesBasedPrice:
 AppBundle\Entity\Sylius\Order:
   order_{1..500}:
     __factory:
-      '@sylius.factory.order::createForDeliveryAndPrice':
+      '@sylius.factory.order::createForDelivery':
         - "@delivery_<current()>"
-        - "@price_<current()>"
     __calls:
-      #      FIXME: that does not set an order number on each task (normally it's handled by OrderSubscriber)
+      # FIXME: this does not set an order number on each task (normally it's handled by OrderSubscriber)
+      # but doing so inside DeliveryOrderProcessor (via OrderManager.onDemand) is too slow
       - setNumber: [ "A<current()>" ]
       - setState: [ 'new' ]
+    # The rest of initialization is done by DeliveryOrderProcessor
+
