--- a/fixtures/ORM/pricing_rule_set_with_names.yml
+++ b/fixtures/ORM/pricing_rule_set_with_names.yml
@@ -9,15 +9,6 @@ AppBundle\Entity\Address:
     streetAddress: '17, rue Milton 75009 Paris 9ème'
     geo: "@geo_1"
 
-AppBundle\Entity\Sylius\ProductOptionValue:
-  product_option_value_1:
-    currentLocale: fr
-    code: 'CPCCL-ODDLVR-PR-1'
-    value: 'Existing Option'
-    price: 0
-    enabled: true
-    option: '@product_option_fixed_price_rules'
-
 AppBundle\Entity\Delivery\PricingRuleSet:
   pricing_rule_set_1:
     name: 'Test Set with ProductOptions'
@@ -29,12 +20,21 @@ AppBundle\Entity\Delivery\PricingRule:
     price: '500'
     position: 1
     ruleSet: '@pricing_rule_set_1'
-    productOptionValue: '@product_option_value_1'
   pricing_rule_2:
     expression: 'weight > 1000'
     price: '200'
     position: 2
     ruleSet: '@pricing_rule_set_1'
+
+AppBundle\Entity\Sylius\ProductOptionValue:
+  product_option_value_1:
+    currentLocale: fr
+    code: 'CPCCL-ODDLVR-PR-1'
+    value: 'Existing Option'
+    price: 0
+    enabled: true
+    option: '@product_option_fixed_price_rules'
+    pricingRule: '@pricing_rule_1'
 
 AppBundle\Entity\Store:
   store_1:
