--- a/fixtures/ORM/store_with_manual_supplements.yml
+++ b/fixtures/ORM/store_with_manual_supplements.yml
@@ -54,20 +54,17 @@ AppBundle\Entity\Delivery\PricingRule:
     price: 200
     position: 3
     ruleSet: '@pricing_rule_set_with_supplements'
-    productOptionValue: '@manual_supplement_option_value_1'
   manual_supplement_2:
     expression: 'false'
     price: 300
     position: 4
     ruleSet: '@pricing_rule_set_with_supplements'
-    productOptionValue: '@manual_supplement_option_value_2'
   #  manual supplement not belonging to a pricing rule for this store
   manual_supplement_3:
     expression: 'false'
     price: 300
     position: 1
     ruleSet: '@pricing_rule_set_2'
-    productOptionValue: '@manual_supplement_option_value_1'
 
 AppBundle\Entity\Sylius\ProductOptionValue:
   manual_supplement_option_value_1:
@@ -75,11 +72,19 @@ AppBundle\Entity\Sylius\ProductOptionValue:
     value: 'Express Delivery'
     code: 'EXPRESS_DELIVERY'
     option: '@product_option_fixed_price_rules'
+    pricingRule: '@manual_supplement_1'
   manual_supplement_option_value_2:
     currentLocale: 'fr'
     value: 'Fragile Handling'
     code: 'FRAGILE_HANDLING'
     option: '@product_option_fixed_price_rules'
+    pricingRule: '@manual_supplement_2'
+  manual_supplement_option_value_3:
+    currentLocale: 'fr'
+    value: 'Express Delivery 3'
+    code: 'EXPRESS_DELIVERY_3'
+    option: '@product_option_fixed_price_rules'
+    pricingRule: '@manual_supplement_3'
 
 AppBundle\Entity\Store:
   store_1:
